SUBDIRS = libs radiant plugins

# Install data and stuff
gamedir = $(pkgdatadir)/games
game_DATA = $(top_srcdir)/install/games/doom3.game 

bitmapsdir = $(pkgdatadir)/bitmaps
bitmaps_DATA = $(top_srcdir)/install/bitmaps/*

applicationsdir = $(datadir)/applications
applications_DATA = tools/linux/darkradiant.desktop

# Install XML config files
pkgdata_DATA = $(top_srcdir)/install/colours.xml \
			   $(top_srcdir)/install/user.xml \
			   $(top_srcdir)/install/menu.xml \
			   $(top_srcdir)/install/input.xml \
			   $(top_srcdir)/install/debug.xml

# Install GL programs
glprogsdir = $(pkgdatadir)/gl
glprogs_DATA = $(top_srcdir)/install/gl/*

